# renovate-pip-compile-pyproject-example

./: pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
