[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-project"
requires-python = ">=3.11"
version = "1.2.3"
description = "Test project for pip-compile with setuptools"
dependencies = [
  "aiohttp==3.12.14",
  "pydantic==2.11.7",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "flake8==7.3.0",
  "pip-tools==7.4.0",
]
